<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.settings.SettingsFragment">
    <data>

        <import type="android.view.View" />
        <import type="android.text.TextUtils" />

        <variable
            name="viewModelStart"
            type="com.dw.ironButt.ui.settings.SettingsViewModel" />
    </data>

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RadioGroup
                android:id="@+id/radio_group_driver"
                style="@style/Item_list_user"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="50dp"

                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radio_dtn_driverTrue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/primary_red"
                    android:checked="@={viewModelStart.driver}"
                    android:text="@string/driver" />

                <RadioButton
                    android:id="@+id/radio_btn_driverFalse"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="@={!viewModelStart.driver}"
                    android:buttonTint="@color/primary_red"
                    android:text="@string/passenger" />
            </RadioGroup>

            <LinearLayout
                style="@style/Item_list_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <RadioGroup
                    android:id="@+id/radio_group_moto"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal">
                    <RadioButton
                        android:id="@+id/radio_btn_motorcycle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="@={viewModelStart.moto}"
                        android:buttonTint="@color/primary_red"
                        android:text="@string/motorcycle" />
                    <RadioButton
                        android:id="@+id/radio_btn_scooter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="@={!viewModelStart.moto}"
                        android:buttonTint="@color/primary_red"
                        android:text="@string/scooter" />
                </RadioGroup>

                <RadioGroup
                    android:id="@+id/radio_group_power"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    app:visionRadioGroupIfSelect="@{viewModelStart.moto}">

                    <RadioButton
                        android:id="@+id/radio_btn_power_hig"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="@={viewModelStart.power}"
                        android:buttonTint="@color/primary_red"
                        android:text="@string/_300" />

                    <RadioButton
                        android:id="@+id/radio_btn_power_low"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="@={!viewModelStart.power}"
                        android:buttonTint="@color/primary_red"
                        android:text="@string/_300_" />
                </RadioGroup>
            </LinearLayout>
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Item_list_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/ed_country_and_city_of_residence"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="йцукенгшщзхъфывапролджэячсмитьбю ЦУКЕНГШЩЗХФВАПРОЛДЖЭЯЧСМИТБЮ 0123456789"
                    android:hint="@string/country_and_city_of_residence"
                    android:inputType="text"
                    android:text="@={viewModelStart.countryCity}"
                    app:editTextError="@{viewModelStart.countryCity}"
                    tools:ignore="SpeakableTextPresentCheck" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                style="@style/Item_list_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/ed_user_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="йцукенгшщзхъфывапролджэячсмитьбю ЦУКЕНГШЩЗХФВАПРОЛДЖЭЯЧСМИТБЮ 0123456789"
                    android:hint="@string/firstName_lastName"
                    android:inputType="text"
                    android:text="@={viewModelStart.nameUser}"
                    app:editTextError="@{viewModelStart.nameUser}"
                    tools:ignore="SpeakableTextPresentCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Item_list_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/ed_brand_moto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="qwertyuiopasdfghjklzxcvbnm QWERTYUIOPASDFGHJKLZXCVBNM 0123456789"
                    android:hint="@string/motorcycle_brand"
                    android:inputType="text"
                    android:text="@={viewModelStart.brandMoto}"
                    app:editTextError="@{viewModelStart.brandMoto}"
                    tools:ignore="SpeakableTextPresentCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_start"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                style="@style/Item_list_user"
                android:text="@string/Save"
                android:onClick="@{()->viewModelStart.onClickSave()}"/>

        </LinearLayout>
    </ScrollView>
</layout>