<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.finish.FinishFragment">

    <data>

        <import type="android.view.View" />

        <import type="android.text.TextUtils" />

        <variable
            name="viewModelFinish"
            type="com.dw.ironButt.ui.finish.FinishViewModel" />

        <!--        <variable-->
        <!--            name="geoCoder"-->
        <!--            type="com.denisovdw.ironbutt.presrntation.view.finish.FinishInfo" />-->
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="200dp">

            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/map_finish"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ProgressBar
                android:id="@+id/location_progressBar_start"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:indeterminateTint="@color/primary_red"
                app:hideLoading="@{viewModelFinish.hideProgressBar}" />
        </FrameLayout>
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/travel_time"
                android:textSize="20sp"
                tools:text="Время в пути" />


            <TextView
                style="@style/view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/odometer"
                android:textSize="20sp"
                tools:text="По одометру" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@{viewModelFinish.totalTime}"
                android:textSize="20sp"
                tools:text="00:00" />


            <TextView
                style="@style/view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@{viewModelFinish.totalDistance}"
                android:textSize="20sp"
                tools:text="0000" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="sans-serif-light"
            android:text="@={viewModelFinish.textInfoSendRequest}"
            android:textSize="24sp"
            android:hint="@string/load_track"
            app:visibleView="@{viewModelFinish.visibilityBtnSend}"/>

        <ProgressBar
            android:id="@+id/progress_bar"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:progress="@{viewModelFinish.progressBarRequest}"
            android:max="100"
            tools:progress="40"
            app:visibleView="@{viewModelFinish.visibilityBtnSend}" />
        <Button
            style="@style/Item_list_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:text="@string/send"
            android:textSize="25sp"
            android:textStyle="bold"
            android:onClick="@{()->viewModelFinish.onClickSendToServer()}"
            app:hideView="@{viewModelFinish.visibilityBtnSend}"/>

        <Button
            style="@style/Item_list_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:text="@string/cancel"
            android:textSize="25sp"
            android:textStyle="bold"
            android:onClick="@{()->viewModelFinish.onClickCancel()}"
            app:visibleView="@{viewModelFinish.visibilityBtnSend}"/>

    </LinearLayout>



</layout>